# fastwam-ood-eval

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: condarc.yaml  eval_clean_full.yaml  eval_clean_smoke.yaml  eval_mock_smoke.yaml  eval_ood_full.yaml  eval_ood_pilot.yaml  eval_ood_smoke.yaml  paths.example.yaml
docs/: architecture.md  engineering_highlights.md  environment_setup.md  experiment_ledger.md  experiment_protocol.md  research_index.md  results_schema.md  thought1_execution_guide.md  thought1_generalization.md  thought1_readiness.md  thought1_report.md  thought2_blind_review_and_sampling.md  thought2_concepts.md  thought2_execution_guide.md  thought2_static_calibration.md  thought2_statistical_analysis_plan.md  thought2_upstream_audit.md  thought3_adapter_plan.md  troubleshooting.md  upstream_notes.md
scripts/: activate_env.sh  aggregate_results.sh  check_environment.sh  create_env.sh  download_checkpoints.sh  download_fastwam_runtime_models.sh  download_libero_plus_assets.sh  export_failure_review.py  fetch_upstreams.sh  plan_thought1.sh  plan_thought1_pilot.sh  run_3gpu_eval.sh  run_4gpu_eval.sh  run_clean_eval.sh  run_ood_eval.sh  run_smoke_test.sh  run_thought1_3gpu_full.sh  run_thought1_single_gpu_full.sh  verify_installation.sh
tests/: conftest.py  test_aggregation.py  test_blind_review.py  test_config.py  test_diagnostic_aggregate.py  test_diagnostic_cli.py  test_diagnostic_cohort.py  test_diagnostic_runner.py  test_doctor.py  test_dry_run.py  test_episode_result.py  test_fastwam_future_probe.py  test_resume.py  (+10 more)
(+76 files in other folders)
