[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastwam-ood-eval"
version = "0.1.0"
description = "Reproducible clean and OOD evaluation harness for Fast-WAM on LIBERO and LIBERO-Plus"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [{name = "Fast-WAM OOD Evaluation contributors"}]
dependencies = ["PyYAML>=5.4"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
fastwam-ood = "fastwam_ood_eval.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

